--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,10 +2,10 @@
     <h1>Contact</h1>
 
     <ul class="social-media">
-        <li><i class='bx bxl-gmail'></i></li>
-        <li><i class="bx bxl-linkedin"></i></li>
-        <li><i class='bx bxl-instagram'></i></li>
-        <li><i class='bx bxl-github'></i></li>
+        <li><a href="https://www.google.com/intl/tr/gmail/about/" target="_blank"><i class="bx bxl-gmail"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/engincan-gündüz-9704b824a/" target="_blank"><i class="bx bxl-linkedin"></i></a></li>
+        <li><a href="https://www.instagram.com/engin.gunduzz/" target="_blank"><i class="bx bxl-instagram"></i></a></li>
+        <li><a href="https://github.com/engincangunduz" target="_blank"><i class="bx bxl-github"></i></a></li>
     </ul>
 
     <ul class="contact-info">
