--- a/src/app/baner/baner.component.html
+++ b/src/app/baner/baner.component.html
@@ -5,14 +5,19 @@
 
     <div class="name">
         <span>
-            <span>Hi,</span> I am
+            <span>Hi,</span> Welcome to
         </span><br>
-        <span>Engincan Gündüz </span>
-        <span>Software Engineer</span>
+        <span>My Portfolio Website </span>
+        <span>This Website Is For My Internship Project </span>
     </div>
 
     <div class="profile">
-        <div class="profile-bg"></div>
-        <img src="assets/Sundar-Pichar-Profile-Square.png" alt="">
+        <img src="assets/Profile PNG.png" alt="Avatar">
+        <div class="overlay">
+            <div class="text">
+                <h4>I am Engincan Gündüz</h4>
+                <h5>Software Engineer</h5>
+            </div>
+        </div>
     </div>
 </div>
